# MinipollV5

./: .gitignore  .windsurfrules  CLAUDE.md  README.md  pyproject.toml
.github/chatmodes/: plan.chatmode.md
.github/instructions/: GameExplainsion.md  auto-search.instructions.md  memory-bank.instructions.md
.github/memory-bank/: CAMERA_FIX_COMPLETE.md  LAYER_LAB_INTEGRATION_COMPLETE.md  UIplaningForAllGame.md  activeContext.md  existing-scripts.md  main-menu-requirements.md  minipoll-reorganization-strategy.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  systems-dependency-tree.md  techContext.md
Assets/: Bubble_Buddy_0709190541_texture.fbx  PlayButton_Professional.controller  SettingsButton_Professional.controller  VideoDisplayTimeline.playable  walking.controller
Assets/Animations/: ButtonsEntranceAnimation.anim  MenuButtons_AnimController.controller
Assets/Branding/: minipoll_brand_system.html
Assets/Materials/: Bubble_Buddy_0709190541_texture.mat  FoodMaterial_Red.mat  GroundMaterial_Brown.mat  MinipollMaterial_Blue.mat  MinipollMaterial_Green.mat  MinipollMaterial_Purple.mat  WaterMaterial_Cyan.mat  texture_0.mat
Assets/Needsim/: NEEDSIM Manager.prefab  Simulation.XML
Assets/Prefabs/: PlayButton_Professional.prefab  SettingsButton_Professional.prefab
Assets/Scenes/: 01_CoreCreatureScene.unity  01_SplashMenu.unity  02_GameScene.unity  CoreCreatureScene.unity  README.md  current.unity
Assets/Scripts/: AdvancedFoodSource.cs  FoodSource.cs  (+30 more)
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+2574 files in other folders)
