[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minipoll-v5"
version = "0.1.0"
description = "Minipoll V5 Python utilities"
authors = [{name = "Amita", email = "amita@example.com"}]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
minipoll-mcp = "minipoll.mcp_server:main"
